--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "nodemailer": "^7.0.9",
     "postcss": "^8.5.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
